k8s/grafana-prometheus/deployment-grafana.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana-simple
    criticality: test
    product: grafana-simple
    runtime: Grafana
  name: grafana-simple
spec:
  selector:
    matchLabels:
      app: grafana-simple
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana-simple
    spec:
      volumes:
        - name: grafana-simple-storage-volume
          persistentVolumeClaim:
            claimName: grafana-simple-persitence-volume-claim
      containers:
        - name: prometheus
          image: grafana/grafana
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: grafana-simple-storage-volume
              mountPath: /var/lib/grafana
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-simple
  labels:
    app: grafana-simple
    criticality: test
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: grafana-simple
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-private
    nginx.ingress.kubernetes.io/large-client-header-buffers: number=4 size=32k
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: grafana-simple
  name: grafana-simple-test
spec:
  rules:
    - host: grafana-simple.eks.my-cluster.ridedev.io
      http:
        paths:
          - backend:
              serviceName: grafana-simple
              servicePort: http
            path: /
  tls:
    - hosts:
        - grafana-simple.eks.my-cluster.ridedev.io
      secretName: cluster-wildcard-cert
